examples/test/testpolicy12999.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12999
  namespace: namespace147
spec:
  podSelector:
    matchLabels:
      key36: value46
      key15: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value16
      podSelector:
        matchLabels:
          key12: value1
          key40: value9
          key26: value25
